Changes for Perl extension Test-NoWarnings

1.04 Thu 1 Dec 2011 - Adam Kennedy
	- Added the experimental :early debugging pragma to cause warnings
	  to be emitted immediately. This should stay off otherwise (ADAMK)

1.03 Tue 2 Aug 2011 - Adam Kennedy
	- Test::Builder and Test::Tester dependencies were the wrong way
	  around, corrected (ADAMK)

1.02 Thu 9 Sep 2010 - Adam Kennedy
	- Don't "use warnings" anywhere inside of Test::NoWarnings::* just
	  in case we trigger a recursive warning handler in future (ADAMK)
	- Remove the need for a private variable when detecting
	  Devel::StackTrace support (ADAMK)
	- Don't import unused functions from Carp or Test::Builder (ADAMK)
	- Minor documentation tweaks (ADAMK)
	- Correct the repository metadata in META.yml (ADAMK)
	- Minor cleanups in the eumm-update generated code (ADAMK)
	- Added a dedicated compile test (ADAMK)

1.01 15 Jan 2010 - Adam Kennedy
	- My release automation accidentally decided that Test::NoWarnings
	  was a Perl licensed distribution. Added in the appropriate changes
	  to make sure it is correctly built with the LGPL license.

1.00 11 Jan 2010 - Adam Kennedy
	- Cleaned and updated the packaging of the module, the dependencies
	  and the Makefile.PL contents, but otherwise remains unchanged (ADAMK)
	- Now makes explicit the Perl 5.006 dependency that was previously
	  an undocumented implicit dependency (ADAMK)
	- Adding some rudimentary author tests, added automatically by
	  my release automation (ADAMK)

0.084 20 Oct 2007
	- Perl 5.005 throws a warning when accessing $Carp::VERSION and was
	  causing a test to fail.

0.083 15 Dec 2006
	- Finally got rid of INSTALLDIRS => 'perl' from Makefile.PL. It should
	  never have been there but removing it could cause hassle because of
	  Perl's weird ordering of include directories. Basically if an older
	  version exists in the 'perl' installdir it could be picked up instead
	  of the newer version.

0.082  8 Oct 2005