@@ -1,0 +1,11 @@
+#!/usr/bin/perl
+
+use strict;
+use Test::More;
+use Test::NoWarnings 'had_no_warnings';
+
+pass("just testing");
+
+had_no_warnings;
+
+done_testing;
